Add a picture of the cookies

--- a/recipes/molasses-cookies.html
+++ b/recipes/molasses-cookies.html
@@ -8,6 +8,7 @@
 
 <body>
     <h1>Molasses Cookies</h1>
+    <img src="https://images-gmi-pmc.edge-generalmills.com/bf945432-6462-4f61-87b3-121b2905aa8d.jpg" alt="A few molasses cookies.">
 </body>
 
 </html>
