Describe the making and the cookies

--- a/recipes/molasses-cookies.html
+++ b/recipes/molasses-cookies.html
@@ -9,6 +9,14 @@
 <body>
     <h1>Molasses Cookies</h1>
     <img src="https://images-gmi-pmc.edge-generalmills.com/bf945432-6462-4f61-87b3-121b2905aa8d.jpg" alt="A few molasses cookies.">
+
+    <p>Molasses cookies are soft, chewy, seasonal cookies that originate in America. Despite the name being <en>molasses</en> cookies, these cookies include several spices that warm the palette. These indlude cinnamon, nutmeg, ginger, and clove.
+    </p>
+    <p>This recipe is made like a normal cookie recipe up until the batter is done. Before rolling up your cookies and putting them in the oven, you'll want to put them in the fridge for about an hour. Waiting for cookies can be diffcult, but it is important to make the fat in the cookies cold before we put it in the oven.This prevents them from over spreading in the oven, creating a crispy, oily cookie.</p>
+    <p>You will also need to set aside an extra 1/3 cup of white sugar to roll  balls of dough in. Sugar naturally makes baked goods drier. By rolling the outside of the cookie in it, it prevents the cookie from becoming too soft and being soggy. It also gives the cookie a nice crunch, as well as the crinkling seen on the surface.
+    </p>
+    <p>Lastly, make sure to not immediately put your cookies away after baking. You can eat them about five minutes after they come out of the oven, however, if you put the cookies in a tupperware container, they will become soggy. The cookies need time to cool off so they don't keep too much moisture inside. Just give them around half an hour and they should be good to put away.
+    </p>
 </body>
 
 </html>
