List steps and ingredients

--- a/recipes/molasses-cookies.html
+++ b/recipes/molasses-cookies.html
@@ -17,6 +17,33 @@
     </p>
     <p>Lastly, make sure to not immediately put your cookies away after baking. You can eat them about five minutes after they come out of the oven, however, if you put the cookies in a tupperware container, they will become soggy. The cookies need time to cool off so they don't keep too much moisture inside. Just give them around half an hour and they should be good to put away.
     </p>
+
+    <h3>Ingredients:</h3>
+    <ul>
+        <li>2 and 1/4 cups all purpose flour</li>
+        <li>1 and 1/2 teaspoons baking soda</li>
+        <li>2 teaspoons ground ginger</li>
+        <li>1 and 1/4 teaspoons ground cinnamon</li>
+        <li>1/4 teaspoon ground cloves</li>
+        <li>1/4 teaspoon nutmeg</li>
+        <li>1/4 teaspoon salt</li>
+        <li>3/4 cup butter, room temperature</li>
+        <li>1/2 cup packed brown sugar</li>
+        <li>1/4 cup white sugar, and an extra 1/3 cup white sugar for rolling.</li>
+        <li>1/4 cup molasses</li>
+        <li>1 large egg, preferably at room temperature</li>
+        <li>2 teaspoons vanilla extract</li>
+    </ul>
+
+    <h3>Steps:</h3>
+    <ol>
+        <li>Whisk the flour, baking soda, ginger, cinnamon, cloves, nutmeg, and salt together until combined. Set aside.</li>
+        <li>In a large bowl, cream together the butter, brown sugar, and 1/4 cup of white sugar. If you have a robot for this, it will take about 2 minutes on high speed, otherwise, beat vigorously with a fork until it is fully combined and slightly lighter than when you started mixing (about 2-5 minutes). Add the egg and vanilla extract and mix until combines. Scrape down the sides of the bowl.</li>
+        <li>Slowly, or on a low speed, mix the dry ingredients into the wet ingredients until just combined. The dough will be a bit sticky. Cover dough tightly with foil or plastic wrap and stick it in the fridge for an hour.</li>
+        <li>Preheat the oven to 350 degrees Fahreheit. Line two baking sheets with parchment paper.</li>
+        <li>Remove cookie dough from the refrigerator. If the cookie dough happened to chill longer than 2 hours, let it sit at room temperature for at least 30 minutes. The cookies may not spread enough in the oven if the dough is that cold. Roll cookie dough, 1 tablespoon each, into balls. Roll each in granulated sugar and arrange 3 inches apart on the baking sheets. Bake for 11-12 minutes or until edges appear set.</li>
+        <li>Remove carefully from oven and allow cookies to cool a minimum of 5 minutes before eating. To store them, wait at least 30 minutes if you want to put them in a container. They will stay good at room temperature for a week.</li>
+    </ol>
 </body>
 
 </html>
