--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 
 <body>
     <h1>Odin Recipes</h1>
+    <ul>
+        <li><a href="./recipes/molasses-cookies.html">Molasses Cookies</a></li>
+    </ul>
 </body>
 
 </html>
