Add a link to the home page

--- a/recipes/molasses-cookies.html
+++ b/recipes/molasses-cookies.html
@@ -10,7 +10,7 @@
     <h1>Molasses Cookies</h1>
     <img src="https://images-gmi-pmc.edge-generalmills.com/bf945432-6462-4f61-87b3-121b2905aa8d.jpg" alt="A few molasses cookies.">
 
-    <p>Molasses cookies are soft, chewy, seasonal cookies that originate in America. Despite the name being <en>molasses</en> cookies, these cookies include several spices that warm the palette. These indlude cinnamon, nutmeg, ginger, and clove.
+    <p>Molasses cookies are soft, chewy, seasonal cookies that originate in America. Despite the name being <en>molasses</en> cookies, these cookies include several spices that warm the palette. These include cinnamon, nutmeg, ginger, and clove.
     </p>
     <p>This recipe is made like a normal cookie recipe up until the batter is done. Before rolling up your cookies and putting them in the oven, you'll want to put them in the fridge for about an hour. Waiting for cookies can be diffcult, but it is important to make the fat in the cookies cold before we put it in the oven. This prevents them from over spreading in the oven, creating a crispy, oily cookie.
     </p>
@@ -45,6 +45,7 @@
         <li>Remove cookie dough from the refrigerator. If the cookie dough happened to chill longer than 2 hours, let it sit at room temperature for at least 30 minutes. The cookies may not spread enough in the oven if the dough is that cold. Roll cookie dough, 1 tablespoon each, into balls. Roll each in granulated sugar and arrange 3 inches apart on the baking sheets. Bake for 11-12 minutes or until edges appear set.</li>
         <li>Remove carefully from oven and allow cookies to cool a minimum of 5 minutes before eating. To store them, wait at least 30 minutes if you want to put them in a container. They will stay good at room temperature for a week.</li>
     </ol>
+    <p><a href="../index.html">Back to Homepage</a></p>
 </body>
 
 </html>
