Theme the index page to holiday

--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Recipes</title>
+    <title>Holiday Recipes</title>
 </head>
 
 <body>
-    <h1>Odin Recipes</h1>
+    <h1>Holiday Recipes</h1>
+    <h5>Courtesy of Odin</h5>
+    <img src="https://spwww.sccpss.com/schools/saa/PublishingImages/Lists/Calendar/calendar/pupazzi-900x400.jpg" alt="Three smiling plush snowmen">
     <ul>
         <li><a href="./recipes/molasses-cookies.html">Molasses Cookies</a></li>
     </ul>
