--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 
 <body>
     <h1>Holiday Recipes</h1>
-    <h5>Courtesy of Odin</h5>
+    <p>Courtesy of Odin</p>
     <img src="https://spwww.sccpss.com/schools/saa/PublishingImages/Lists/Calendar/calendar/pupazzi-900x400.jpg" alt="Three smiling plush snowmen">
-    <ul>
-        <li><a href="./recipes/molasses-cookies.html">Molasses Cookies</a></li>
-    </ul>
+
+    <h3><a href="recipes/molasses-cookies.html">Molasses Cookies</a></h3>
+    <h3><a href="recipes/lemon-curd.html">Lemon Curd</a></h3>
 </body>
 
 </html>
