Fully integrate scone recipe The index will now contain a link to the  scones, and the scones page is finished.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <h3><a href="recipes/molasses-cookies.html">Molasses Cookies</a></h3>
     <h3><a href="recipes/lemon-curd.html">Lemon Curd</a></h3>
+    <h3><a href="recipes/cranberry-scones.html">Cranberry Orange Scones</a></h3>
 </body>
 
 </html>
