--- a/recipes/cranberry-scones.html
+++ b/recipes/cranberry-scones.html
@@ -15,8 +15,40 @@
     </p>
     <p>In order to make a good scone that won't dry your mouth like a sponge, you need to use a thick liquid to keep it together. Buttermilk, heavy cream, and coconut cream all work. Using regular milk will make your scones flat and dry. Similarly, using white sugar, or any sugar with similar sized grains, as a topping for your scone will make it dry. Only use turbinado (sugar in the raw), demerara sugar, or sugars with larger grains to top it. Otherwise, omit the sugar on top all together. It won't affect the flavor of the scones; the sugar simply adds a nice crunch on top.
     </p>
-    <p>Lastly, it is important to make sure the butter for the scones is cold. It needs to be frozen. It will melt while you are working with it 
+    <p>Lastly, it is important to make sure the butter for the scones is cold. It needs to be frozen. It will melt while you are working with it, and you want the least amount of that as possible.
     </p>
+    
+    <h3>Ingredients:</h3>
+    <ul>
+        <li>2 cups of flour (250 grams), plus more for hands and work surface.</li>
+        <li>1/2 cup white sugar</li>
+        <li>2 1/2 teaspoons baking powder</li>
+        <li>1/2 teaspoon salt</li>
+        <li>2 teaspoons orange zest (about 1 orange)</li>
+        <li>1/2 cup unsalted butter, <strong>frozen</strong></li>
+        <li>1/2 cup heavy cream, plus more for brushing</li>
+        <li>1 large egg</li>
+        <li>1 teaspoon vanilla extract</li>
+        <li>1 cup frozen cranberries (dried is also fine)</li>
+        <li>1 cup confectioners' (powdered) sugar</li>
+        <li>2-3 Tablespoons fresh orange juice</li>
+        <li>(optional) 1 tablespoon coarse sugar, for topping</li>
+    </ul>
+
+    <h3>Steps:</h3>
+    <ol>
+        <li>Whisk flour, sugar, baking powder, salt, and orange zest together in a large bowl. Grate the frozen butter using a box grater. Add it to the flour mixture and combine with a pastry cutter, two forks, or your fingers until the mixture comes together in pea-sized crumbs. Place in the refrigerator or freezer as you mix the wet ingredients together.</li>
+        <li>Whisk 1/2 cup heavy cream, the egg, and vanilla extract together in a small bowl. Drizzle over the flour mixture, add the cranberries, then mix together until everything appears moistened.</li>
+        <li>Pour onto the counter and, with floured hands, work dough into a ball as best you can. Dough will be sticky. If it's too sticky, add a little more flour. If it seems too dry, add 1-2 more Tablespoons heavy cream. Press into an 8-inch disc and, with a sharp knife or bench scraper, cut into 8 wedges.</li>
+        <li>Place scones on a plate or lined baking sheet (if your fridge has space!) and refrigerate for at least 15 minutes. Meanwhile, preheat oven to 400 F.</li>
+        <li>Brush scones with extra heavy cream and for extra crunch, sprinkle with coarse sugar.</li>
+        <li>Line a large baking sheet with parchment paper or silicone baking mat. After refrigerating, arrange scones 2-3 inches apart on the prepared baking sheet(s).</li>
+        <li>Bake for 22-25 minutes or until golden brown around the edges and lightly browned on top. Remove from the oven and allow to cool for a few minutes as you make the glaze.</li>
+        <h4>The Glaze:</h4>
+        <li>Whisk the confectioners' sugar and orange juice together. Add a little more confectioners' sugar to thicken or more juice to thin. Drizzle over scones.</li>
+        <p>Scones will keep well at room temperature for 2 days, or refrigerated for 5.</p>
+    </ol>
+
     <a href="../index.html">Back to Homepage</a>
 </body>
 
