Style the website with CSS

--- a/index.html
+++ b/index.html
@@ -4,10 +4,32 @@
 <head>
     <meta charset="UTF-8">
     <title>Holiday Recipes</title>
+
+    <style>
+        
+        * {
+            text-align: center;
+            font-family: sans-serif;
+            background-color: rgb(228, 228, 255);
+        }
+        a {
+            font-size: 25px;
+        }
+        img {
+            height: 300px;
+            width: auto;
+            display: block;
+            margin: auto;
+        }
+
+        h3 {
+            font-size: 28px;
+        }
+    </style>
 </head>
 
 <body>
-    <h1>Holiday Recipes</h1>
+    <h1 style="color:firebrick; font-size:40px;">Holiday Recipes</h1>
     <p>Courtesy of Odin</p>
     <img src="https://spwww.sccpss.com/schools/saa/PublishingImages/Lists/Calendar/calendar/pupazzi-900x400.jpg" alt="Three smiling plush snowmen">
 
