--- a/recipes/molasses-cookies.html
+++ b/recipes/molasses-cookies.html
@@ -4,6 +4,13 @@
 <head>
     <meta chartype="UTF-8">
     <title>Molasses Cookies</title>
+
+    <link rel="stylesheet" href="../style.css">
+    <style>
+        h3, h1 {
+            background-color:rgb(192, 162, 130);
+        }
+    </style>
 </head>
 
 <body>
